# otel-telemetry-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-images.yml
charts/otel-telemetry-pipeline/: Chart.yaml  values.yaml
charts/otel-telemetry-pipeline/templates/: NOTES.txt  _helpers.tpl  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  loader-configmap.yaml  loader-deployment.yaml
cmake/: dependencies.cmake
configs/: gateway.yaml  loader.yaml  otel-collector.yaml
configs/grafana/dashboards/: otel-logs-overview.json  otel-metrics-overview.json  otel-traces-overview.json
configs/grafana/provisioning/dashboards/: default.yml
configs/grafana/provisioning/datasources/: clickhouse.yml
docker/: gateway.Dockerfile  loader.Dockerfile
examples/fastapi-rest-otel/: README.md  locustfile.py  requirements.txt  test_metrics.py
examples/fastapi-rest-otel/app/: main.py
libs/clickhouse_writer/: CMakeLists.txt
libs/clickhouse_writer/include/clickhouse_writer/: clickhouse_writer.h
libs/clickhouse_writer/src/: clickhouse_writer.cpp
libs/jetstream_client/: CMakeLists.txt
libs/jetstream_client/include/jetstream_client/: jetstream_client.h
libs/jetstream_client/src/: jetstream_client.cpp
libs/otlp_decoder/: CMakeLists.txt
libs/otlp_decoder/include/otlp_decoder/: decoder.h
libs/otlp_decoder/src/: decoder.cpp
libs/telemetry/: CMakeLists.txt
libs/telemetry/include/telemetry/: tracer.h
libs/telemetry/src/: tracer.cpp
scripts/: clickhouse_schema.sql  create_jetstream_stream.sh
services/clickhouse_loader/: CMakeLists.txt  clickhouse_batcher.cpp  jetstream_consumer.cpp  main.cpp
services/jetstream-clickhouse-loader/: CMakeLists.txt  clickhouse_batcher.cpp  clickhouse_batcher.h  config.h  jetstream_consumer.cpp  main.cpp
services/otlp-gateway/: CMakeLists.txt  config.h  export_handler.h  grpc_server.cpp  grpc_server.h  main.cpp  runtime.cpp  runtime.h
services/otlp_gateway/: CMakeLists.txt  grpc_server.cpp  grpc_server.h  main.cpp
tests/: CMakeLists.txt  batch_insert_test.cpp  clickhouse_writer_tests.cpp  grpc_export_handler_tests.cpp  jetstream_client_init_tests.cpp  otlp_decoder_test.cpp  otlp_gateway_runtime_tests.cpp
